2002-10-03  Takeshi Morishima  <qa3507@email.mot.com>

	* install.el (install-elisp-module): Delete an elc file if the
	optional 5th argument `del-elc' is given.
	(install-elisp-modules): Allow the optional 5th argument `del-elc'
	and pass it to `install-elisp-module'.

2002-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mcs-ltn1.el (mime-charset-to-coding-system): Allow the 2nd arg.
	* mcs-nemacs.el (mime-charset-to-coding-system): Ditto.

2002-07-13  Daiki Ueno  <daiki@xemacs.org>

	* mcs-xm.el (encode-mime-charset-string): Use `defun' instead of
	`defsubst'

2002-07-10  Adrian Aichner  <adrian@xemacs.org>

	* emu.el: Conditionalise defalias 'tl:overlay-buffer on
	'tl:overlay-buffer, not 'tl:overlay-put.

2002-06-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mcs-e20.el (charsets-mime-charset-alist): Remove nil's from the
	default value.
	* mcs-xm.el (charsets-mime-charset-alist): Ditto.

2002-06-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mcs-e20.el (charsets-mime-charset-alist): Add Latin8 and Latin9
	charsets.  Suggested by Tatsuya Kinoshita <tats@iris.ne.jp>.
	* mcs-xm.el (charsets-mime-charset-alist): Ditto.

2002-05-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* pccl.el (ccl-usable): Make non-MULE XEmacs don't require `ccl'
	even if this file is mis-compiled for XEmacs with MULE.

2002-03-23  Nix  <nix@esperi.demon.co.uk>

	* poem-ltn1.el (truncate-string): Act like the real `truncate-string':
	do not fail if the string is shorter than the max length.

2002-04-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poem-xm.el (string-to-char-list): Revive it again.

2002-04-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poem-xm.el (string-to-char-list): Remove.  It is restored in
	XEmacs CVS.

2002-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poem-xm.el (char-length): New function.
	(string-to-char-list): New function.

2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* pym.el: Add a note that `def*-maybe' might not provide functions
	or variables at run-time.
