@@ -1,3 +1,7 @@
+2002-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* APEL: Version 10.4 released.
+
 2002-10-03  Takeshi Morishima  <qa3507@email.mot.com>
 
 	* install.el (install-elisp-module): Delete an elc file if the
